corrected nav/div spacing

--- a/tallow.css
+++ b/tallow.css
@@ -204,7 +204,7 @@ nav a, #cartStyle {
 
 /* --- Products  --- */
 
-.sectionTag { padding-bottom: 25px;}
+.sectionTag { padding-bottom: 25px; margin-top: 25px;}
 
 .products { background-color: rgb(247, 247, 247); }
 
